--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,10 +1,11 @@
-#peliculas img, #movie img{
-    width: 250px;
+#peliculas img, #peli img{
+    width: 100%;
+    height: 100%;
 }
 
 @media(min-width:960px){
     #peliculas .col-md-3 .well{
-        height: 450px;
+        height: 250px;
     }   
 
     #peliculas .col-md-3 .img{
