--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,14 +1,15 @@
-#peliculas img, #movie img{
-    width: 100%;
-    height: 100%;
+#movies img, #movie img{
+    width: 10%;
+    height: 10%;
 }
 
-@media(min-width:960px){
-    #peliculas .col-md-3 .well{
-        height: 250px;
-    }   
+#movies .col-md-3 .well{
+    height: 250px;
+    width: 150px;  
+}
 
-    #peliculas .col-md-3 .img{
-        height: 333px;
-    }
+#movies .col-md-3 .img{
+    height: 100%;
+    width: 100%;
+
 }
